@@ -1,8 +1,10 @@
 1.2b10
+- Improved printing dialog
 - Adding and removing tracks no more confuse the undo system
 - The "undo" menu is now chattier about what is next to undo
 - Fixed bug with key selection (when going back to C)
-- Code cleanup and general improvements
+- Code cleanup and general improvements/fixes
+- Started adding support for custom keys (hidden for now)
 
 1.2b9
 - Printing Improvements
